--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,11 @@
 .navlnk {
-    @apply  pl-6 py-4 hover:scale-105 border
+    @apply  pl-6 py-4 hover:scale-105  font-medium hover:text-primary transition-transform
+}
+
+.navlnk.active {
+    @apply text-primary font-bold 
+}
+
+body {
+    @apply bg-base-200
 }
